# xrpc

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  config.ini
base/: BlockingCircularBuffer.h  BlockingQueue.h  BlockingQueuePtr.h  BoundedBlockingCircularBuffer.h  CMakeLists.txt  CountDownLatch.h  Noncopyable.h  Singleton.h  cppbase.h  thread_pool.cc  thread_pool.h  thread_pool_vv.h  threadsafe_queue.h
base/test/: CMakeLists.txt  thread_pool_test.cc
examples/simple/: CMakeLists.txt  main.cc  user.pb.cc  user.pb.h  user.proto
examples/simple/provider/: CMakeLists.txt  main.cc
examples/simple/stub/: CMakeLists.txt  main.cc
xrpc/: CMakeLists.txt  ConfigManager.cc  ConfigManager.h  RpcConfig.cc  RpcConfig.h  RpcProvider.cc  RpcProvider.h  XRpc.cc  XRpc.h  XRpcChannel.cc  XRpcChannel.h  rpcheader.pb.cc  rpcheader.pb.h  rpcheader.proto
